--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
